possible fix for blurring chat input focus on sending message on mobile

--- a/apps/chat/app/styles/main.scss
+++ b/apps/chat/app/styles/main.scss
@@ -182,6 +182,7 @@ html, body, #content {
 			font-size: 14px;
 			word-break: break-word;
 			//box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+			animation: newMessage .4s ease-in-out forwards; 
 		}
 		
 		&:last-child {
@@ -242,7 +243,8 @@ html, body, #content {
 				justify-content: flex-end;
 				
 				.message {
-					background-color: #9EF2C3;
+					//background-color: #9EF2C3;
+					background-color: $blue-20;
 					text-align: right;
 					position: relative;
 					border-top-right-radius: 0px;
@@ -306,7 +308,7 @@ html, body, #content {
 	}
 }
 
-.document-card {
+/*.document-card {
 	max-width: 400px;
 	margin-left: 20px;
 	background-color: white;
@@ -378,7 +380,7 @@ html, body, #content {
 			color: $deepBlue-100;
 			cursor: pointer;
 		}
-}
+}*/
 
 .input-container {
 	width: 100%;
@@ -530,4 +532,17 @@ html, body, #content {
 		transform: translateY(0px) scale(1); 
 		opacity: 1; 
 		transform-origin: 100% 100%;}
+}
+
+
+@keyframes newMessage {
+	0% {
+		transform: translateY(20px) scale(.5); 
+		opacity: 0; 
+		transform-origin: 50% 50%;
+	}
+	100% {
+		transform: translateY(0px) scale(1); 
+		opacity: 1; 
+		transform-origin: 50% 50%;}
 }
